// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Atoms/Pressable passes the snapshot test for basic setup 1`] = `
<View
  accessibilityHint=""
  accessibilityLabel="Press me!"
  accessibilityRole="button"
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "display": "flex",
      },
      Object {
        "backgroundColor": undefined,
        "opacity": undefined,
      },
    ]
  }
>
  Button press
</View>
`;

exports[`Atoms/Pressable passes the snapshot test when using style props 1`] = `
<View
  accessibilityHint=""
  accessibilityLabel="Press me!"
  accessibilityRole="button"
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#6A7BFF",
        "borderColor": "#C5CEE0",
        "borderWidth": 2,
        "display": "flex",
      },
      Object {
        "backgroundColor": "#6A7BFF",
        "opacity": undefined,
      },
    ]
  }
>
  Button press
</View>
`;
